🎨 | Fixing layout bug between footer and main (Fixed footer)

--- a/React-na-escola/src/App.css
+++ b/React-na-escola/src/App.css
@@ -8,6 +8,7 @@
 body {
     box-sizing: border-box;
     font-family: "Pacifico", sans-serif;
+    background-color: #f5f5f5;
 }
 
 /* Lay-out */
