--- a/React-na-escola/src/components/template/Footer.css
+++ b/React-na-escola/src/components/template/Footer.css
@@ -1,9 +1,16 @@
 footer.footer {
     background-color: var(--bg-menu);
     text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    padding: 6px;
+
 }
 
 footer span {
+    vertical-align: top;
     font-family: 'Lato', sans-serif;
     letter-spacing: 3px;
     font-size:14px;
