--- a/React-na-escola/src/components/template/Main.css
+++ b/React-na-escola/src/components/template/Main.css
@@ -1,7 +1,9 @@
 div.content {
     width: 80%;
-    height: 80%;
-    margin:auto;
+    /*height: 80%;*/
+
+    margin: auto;
+    padding: 2% 0 3% 0;
 }
 
 main > div {
